[External] Replace embedded tablesaw.plotly by Maven dependencies (#265)
Replace the embedded source code of the tablesaw-jsplot sub-project with
a corresponding Maven dependency.
The Maven coordinates are (version may of course change):

	<dependency>
		<groupId>tech.tablesaw</groupId>
		<artifactId>tablesaw-jsplot</artifactId>
		<version>0.42.0</version>
	</dependency>

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -117,6 +117,11 @@
 			<artifactId>Paguro</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>tech.tablesaw</groupId>
+			<artifactId>tablesaw-jsplot</artifactId>
+		</dependency>
+
 		<!-- logging dependencies -->
 
 		<dependency>
