[FIXUP] exclude saxon

--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -547,6 +547,7 @@
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
 						<!-- Suppress import of own exported packages -->
 						<Export-Package>*;-noimport:=true</Export-Package>
+						<Import-Package>!net.sf.saxon,*</Import-Package>
 					</instructions>
 					<niceManifest>true</niceManifest>
 				</configuration>
