--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -461,7 +461,15 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.12.4</version>
+					<version>3.0.0-M5</version>
+					<configuration>
+						<includes>
+							<include>**/Test*.java</include>
+							<include>**/*Test.java</include>
+							<!-- TODO: fix those tests and enable them too <include>**/*Tests.java</include>	-->
+							<include>**/*TestCase.java</include>
+						</includes>
+					</configuration>
 				</plugin>
 
 				<plugin>
