[FIXUP] exclude saxon only in external and set noUses=true

--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -555,7 +555,7 @@
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
 						<!-- Suppress import of own exported packages -->
 						<Export-Package>*;-noimport:=true</Export-Package>
-						<Import-Package>!net.sf.saxon,*</Import-Package>
+						<_nouses>true</_nouses>
 					</instructions>
 					<niceManifest>true</niceManifest>
 				</configuration>
