#405 FindMinimum and FindMaximum
- method names for the optimizers can be "Powell" or "ConjugateGradient"
- branch issue405

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -65,6 +65,11 @@
 			<groupId>org.hipparchus</groupId>
 			<artifactId>hipparchus-ode</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.hipparchus</groupId>
+			<artifactId>hipparchus-optim</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.jgrapht</groupId>
