--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -10,7 +10,7 @@
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Symja Java Symbolic Math library.</description>
 	<url>https://github.com/axkr/symja_android_library</url>
-
+ 
 	<licenses>
 		<license>
 			<name>GNU General Public License, Version 3</name>
@@ -250,31 +250,31 @@
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-clustering</artifactId>
-				<version>2.0</version>
+				<version>2.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fft</artifactId>
-				<version>2.0</version>
+				<version>2.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fitting</artifactId>
-				<version>2.0</version>
+				<version>2.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-ode</artifactId>
-				<version>2.0</version>
+				<version>2.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-optim</artifactId>
-				<version>2.0</version>
+				<version>2.1-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
