WIP #514 Implement a Kryo serializer and deserializer

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -121,6 +121,11 @@
 			<groupId>org.organicdesign</groupId>
 			<artifactId>Paguro</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo</artifactId>
+		</dependency>
 
 		<!-- logging dependencies -->
 
