Fix #539: Solve(Conjugate(x)==5-I*20,x)
define inverse function for conjugate

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -127,12 +127,19 @@
 			<artifactId>kryo</artifactId>
 		</dependency>
 
-		<!-- logging dependencies -->
-
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 		</dependency>
+		
+		<!-- test dependencies -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>matheclipse-logging</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+ 
 
 	</dependencies>
 </project>
