--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -149,7 +149,7 @@
 			<dependency>
 				<groupId>com.tngtech.archunit</groupId>
 				<artifactId>archunit-junit4</artifactId>
-				<version>0.23.1</version>
+				<version>1.0.0-rc1</version>
 			</dependency>
 
 			<dependency>
