--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -263,31 +263,31 @@
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-clustering</artifactId>
-				<version>2.2-SNAPSHOT</version>
+				<version>2.2</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fft</artifactId>
-				<version>2.2-SNAPSHOT</version>
+				<version>2.2</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fitting</artifactId>
-				<version>2.2-SNAPSHOT</version>
+				<version>2.2</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-ode</artifactId>
-				<version>2.2-SNAPSHOT</version>
+				<version>2.2</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-optim</artifactId>
-				<version>2.2-SNAPSHOT</version>
+				<version>2.2</version>
 			</dependency>
 
 			<dependency>
@@ -368,6 +368,7 @@
 				<artifactId>kryo</artifactId>
 				<version>5.3.0</version>
 			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
