--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -263,31 +263,31 @@
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-clustering</artifactId>
-				<version>2.2</version>
+				<version>2.3-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fft</artifactId>
-				<version>2.2</version>
+				<version>2.3-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fitting</artifactId>
-				<version>2.2</version>
+				<version>2.3-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-ode</artifactId>
-				<version>2.2</version>
+				<version>2.3-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-optim</artifactId>
-				<version>2.2</version>
+				<version>2.3-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
@@ -539,6 +539,18 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<release>${java.version}</release>
+<!--				<compilerArgs>
+						<arg>-XDcompilePolicy=simple</arg>
+						<arg>-Xplugin:ErrorProne</arg>
+					</compilerArgs>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>com.google.errorprone</groupId>
+							<artifactId>error_prone_core</artifactId>
+							<version>2.15.0</version>
+						</path> 
+					</annotationProcessorPaths> 
+  -->
 				</configuration>
 			</plugin>
 
