--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.matheclipse</groupId>
 	<artifactId>matheclipse</artifactId>
-	<version>2.1.0-SNAPSHOT</version>
+	<version>3.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -369,6 +369,17 @@
 				<version>5.3.0</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.jfree</groupId>
+				<artifactId>jfreechart</artifactId>
+				<version>1.5.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.github.freva</groupId>
+				<artifactId>ascii-table</artifactId>
+				<version>1.2.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -539,7 +550,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<release>${java.version}</release>
-<!--				<compilerArgs>
+					<!--				<compilerArgs>
 						<arg>-XDcompilePolicy=simple</arg>
 						<arg>-Xplugin:ErrorProne</arg>
 					</compilerArgs>
