WIP #582 new matheclipse-image module
- move jfreechart dependency from mathecliopse-core to matheclipse-image
module
- move all ImageExpr related sources into own matheclipse-image module

--- a/symja_android_library/matheclipse-io/pom.xml
+++ b/symja_android_library/matheclipse-io/pom.xml
@@ -26,7 +26,7 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>matheclipse-core</artifactId>
+			<artifactId>matheclipse-image</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
