--- a/symja_android_library/matheclipse-image/pom.xml
+++ b/symja_android_library/matheclipse-image/pom.xml
@@ -8,41 +8,53 @@
 		<version>3.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>matheclipse-discord</artifactId>
+	<artifactId>matheclipse-image</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
-	<description>The Symja discord module</description>
+	<description>The Symja image module</description>
 
 	<licenses>
 		<license>
-			<name>GNU General Public License, Version 3</name>
-			<url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+			<name>GNU Lesser General Public License, Version 3</name>
+			<url>https://www.gnu.org/licenses/lgpl-3.0.html</url>
 			<distribution>repo</distribution>
 			<comments>A free, copyleft license for software and other kinds of works</comments>
-		</license>
+		</license> 
 	</licenses>
 
 	<dependencies>
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>matheclipse-image</artifactId>
+			<artifactId>matheclipse-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>matheclipse-gpl</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.discord4j</groupId>
-			<artifactId>discord4j-core</artifactId>
-			<version>3.2.3</version>
-		</dependency>
+
+		<!-- logging dependencies -->
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>matheclipse-logging</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+		</dependency>
+
+		<!-- test dependencies -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>matheclipse-script</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit-junit4</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -51,21 +63,7 @@
 		<pluginManagement>
 			<plugins>
 
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>exec-maven-plugin</artifactId>
-					<executions>
-						<execution>
-							<id>symjabot</id>
-							<goals>
-								<goal>java</goal>
-							</goals>
-							<configuration>
-								<mainClass>org.matheclipse.discord.SymjaBot</mainClass>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
+				 
 
 			</plugins>
 		</pluginManagement>
