Use https instead of http for repository

--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -95,7 +95,7 @@
 		</repository>
 		<repository>
 			<id>maven-snapshots</id>
-			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 			<layout>default</layout>
 			<releases>
 				<enabled>false</enabled>
