--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -119,13 +119,13 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>2.13.4.2</version>
+				<version>2.14.0-rc1</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.fasterxml.jackson.datatype</groupId>
 				<artifactId>jackson-datatype-jsr310</artifactId>
-				<version>2.13.4</version>
+				<version>2.14.0-rc1</version>
 			</dependency>
 
 			<dependency>
