Add Maven module matheclipse-md2html Markdown to HTML converter
- graphicstest.md contains examples which could be converted for
https://github.com/jsxgraph/json2D_JSXGraph project

--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -44,6 +44,7 @@
 	    <module>matheclipse-beakerx</module>
 		<module>matheclipse-jar</module>
 		<module>tools</module>
+		<module>matheclipse-md2html</module>
 
 		<!-- Deployed modules -->
 		<module>matheclipse-external</module>
