WIP #677 - move "icu4j" (icu4j-72.1.jar - size 14MB) to "matheclipse-io"

--- a/symja_android_library/matheclipse-io/pom.xml
+++ b/symja_android_library/matheclipse-io/pom.xml
@@ -82,6 +82,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.biojava</groupId>
 			<artifactId>biojava-core</artifactId>
 		</dependency>
