WIP #684 - Operating with intervals with closed/opened ends
- improved normalization of single intervals with "equal ends"
  IntervalData({0,Less,  Less, 0 }) returns IntervalData( )

--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>org.matheclipse</groupId>
 	<artifactId>matheclipse</artifactId>
 	<version>3.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Symja Java Symbolic Math library.</description>
 	<url>https://github.com/axkr/symja_android_library</url>
-
 	<licenses>
 		<license>
 			<name>GNU General Public License, Version 3</name>
@@ -25,7 +22,6 @@
 			<comments>A free, copyleft license for software and other kinds of works</comments>
 		</license>
 	</licenses>
-
 	<developers>
 		<developer>
 			<name>Axel Kramer</name>
@@ -34,18 +30,15 @@
 			<organizationUrl>https://github.com/axkr</organizationUrl>
 		</developer>
 	</developers>
-
 	<modules>
-
 		<!-- Internal modules (not deployed).
 		Must not be last to not break deployment entirely.
 		See description of 'skipNexusStagingDeployMojo' in 
 		https://github.com/sonatype/nexus-maven-plugins/blob/master/staging/maven-plugin/README.md#plugin-flags-->
-	    <module>matheclipse-beakerx</module>
+		<module>matheclipse-beakerx</module>
 		<module>matheclipse-jar</module>
 		<module>tools</module>
 		<module>matheclipse-md2html</module>
-
 		<!-- Deployed modules -->
 		<module>matheclipse-external</module>
 		<module>matheclipse-parser</module>
@@ -57,21 +50,17 @@
 		<module>matheclipse-discord</module>
 		<module>matheclipse-logging</module>
 		<module>matheclipse-script</module>
-
 	</modules>
-
 	<scm>
 		<connection>scm:git:git://github.com/axkr/symja_android_library.git</connection>
 		<developerConnection>scm:git:git@github.com:axkr/symja_android_library.git</developerConnection>
 		<url>https://github.com/axkr/symja_android_library.git</url>
 		<tag>HEAD</tag>
 	</scm>
-
 	<issueManagement>
 		<system>GitHub</system>
 		<url>https://github.com/axkr/symja_android_library/issues</url>
 	</issueManagement>
-
 	<distributionManagement>
 		<repository>
 			<id>ossrh</id>
@@ -82,7 +71,6 @@
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
-
 	<repositories>
 		<repository>
 			<id>orekit</id>
@@ -106,221 +94,184 @@
 			</snapshots>
 		</repository>
 	</repositories>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
 		<release.build>false</release.build>
 		<deployment.suppress>false</deployment.suppress> <!-- child modules can set this true to not be published -->
 	</properties>
-
 	<dependencyManagement>
 		<dependencies>
-
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
 				<version>2.14.2</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.fasterxml.jackson.datatype</groupId>
 				<artifactId>jackson-datatype-jsr310</artifactId>
 				<version>2.14.2</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.github.twosigma.beakerx</groupId>
 				<artifactId>beaker-kernel-base</artifactId>
 				<version>1.5.0</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.github.wnameless.json</groupId>
 				<artifactId>json-flattener</artifactId>
 				<version>0.16.4</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
 				<version>2.10.1</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>31.1-jre</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.ibm.icu</groupId>
 				<artifactId>icu4j</artifactId>
 				<version>72.1</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.tngtech.archunit</groupId>
 				<artifactId>archunit-junit4</artifactId>
 				<version>1.0.1</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.univocity</groupId>
 				<artifactId>univocity-parsers</artifactId>
 				<version>2.9.1</version>
 			</dependency>
-
 			<dependency>
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>1.15</version>
 			</dependency>
-
 			<dependency>
 				<groupId>io.github.classgraph</groupId>
 				<artifactId>classgraph</artifactId>
 				<version>4.8.155</version>
 			</dependency>
-
 			<dependency>
 				<groupId>io.javalin</groupId>
 				<artifactId>javalin</artifactId>
 				<version>5.3.2</version>
 			</dependency>
-
 			<dependency>
 				<groupId>io.pebbletemplates</groupId>
 				<artifactId>pebble</artifactId>
 				<version>3.2.0</version>
 			</dependency>
-
 			<dependency>
 				<groupId>io.undertow</groupId>
 				<artifactId>undertow-core</artifactId>
 				<version>2.3.4.Final</version>
 			</dependency>
-
 			<dependency>
 				<groupId>io.undertow</groupId>
 				<artifactId>undertow-servlet</artifactId>
 				<version>2.3.4.Final</version>
 			</dependency>
-
 			<dependency>
 				<groupId>it.unimi.dsi</groupId>
 				<artifactId>fastutil</artifactId>
 				<version>8.5.11</version>
 			</dependency>
-
 			<dependency>
 				<groupId>it.unimi.dsi</groupId>
 				<artifactId>fastutil-core</artifactId>
 				<version>8.5.11</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-csv</artifactId>
 				<version>1.10.0</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>3.12.0</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apache.lucene</groupId>
 				<artifactId>lucene-analyzers-common</artifactId>
 				<version>8.11.2</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi-ooxml</artifactId>
 				<version>5.2.3</version>
 			</dependency>
-
 			<dependency>
 				<groupId>de.uni-mannheim.rz.krum</groupId>
 				<artifactId>jas</artifactId>
 				<version>2.7.170</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apfloat</groupId>
 				<artifactId>apfloat</artifactId>
 				<version>1.11.0-SNAPSHOT</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.codehaus.janino</groupId>
 				<artifactId>janino</artifactId>
 				<version>3.1.9</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.commonmark</groupId>
 				<artifactId>commonmark-ext-gfm-tables</artifactId>
 				<version>0.21.0</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.gavaghan</groupId>
 				<artifactId>geodesy</artifactId>
 				<version>1.1.3</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-clustering</artifactId>
 				<version>3.0-SNAPSHOT</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fft</artifactId>
 				<version>3.0-SNAPSHOT</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fitting</artifactId>
 				<version>3.0-SNAPSHOT</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-ode</artifactId>
 				<version>3.0-SNAPSHOT</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-optim</artifactId>
 				<version>3.0-SNAPSHOT</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.jgrapht</groupId>
 				<artifactId>jgrapht-io</artifactId>
 				<version>1.5.1</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.jsoup</groupId>
 				<artifactId>jsoup</artifactId>
 				<version>1.15.4</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.logicng</groupId>
 				<artifactId>logicng</artifactId>
 				<version>2.4.1</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.owasp.encoder</groupId>
 				<artifactId>encoder</artifactId>
@@ -332,11 +283,15 @@
 				<version>4.10.11</version>
 			</dependency>
 			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>1.7.36</version>
+			</dependency>
+			<dependency>
 				<groupId>org.roaringbitmap</groupId>
 				<artifactId>RoaringBitmap</artifactId>
 				<version>0.9.39</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.biojava</groupId>
 				<artifactId>biojava-core</artifactId>
@@ -347,51 +302,42 @@
 				<artifactId>biojava-alignment</artifactId>
 				<version>7.0.0</version>
 			</dependency>
-
 			<!-- logging dependencies -->
-
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-api</artifactId>
 				<version>2.20.0</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
 				<version>2.20.0</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-1.2-api</artifactId>
 				<version>2.20.0</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-slf4j-impl</artifactId>
 				<version>2.20.0</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.organicdesign</groupId>
 				<artifactId>Paguro</artifactId>
 				<version>3.10.3</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.esotericsoftware</groupId>
 				<artifactId>kryo</artifactId>
 				<version>5.4.0</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.jfree</groupId>
 				<artifactId>jfreechart</artifactId>
 				<version>1.5.4</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.github.freva</groupId>
 				<artifactId>ascii-table</artifactId>
@@ -399,71 +345,58 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
 	<dependencies>
-
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
 			<version>5.9.2</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
 			<version>5.9.2</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
-
 	<build>
 		<pluginManagement>
 			<plugins>
-
 				<plugin>
 					<groupId>org.apache.felix</groupId>
 					<artifactId>maven-bundle-plugin</artifactId>
 					<version>5.1.8</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
 					<version>3.2.0</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.11.0</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>3.1.0</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-enforcer-plugin</artifactId>
 					<version>3.2.1</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-gpg-plugin</artifactId>
 					<version>3.0.1</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-install-plugin</artifactId>
 					<version>3.1.0</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
@@ -474,13 +407,11 @@
 						</archive>
 					</configuration>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>3.5.0</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
@@ -493,7 +424,6 @@
 						<arguments>-Drelease.build=true</arguments>
 					</configuration>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
@@ -511,7 +441,6 @@
 						</nonFilteredFileExtensions>
 					</configuration>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-scm-plugin</artifactId>
@@ -520,13 +449,11 @@
 						<connectionType>developerConnection</connectionType>
 					</configuration>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
 					<version>3.2.1</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -540,13 +467,11 @@
 						</includes>
 					</configuration>
 				</plugin>
-
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
 					<version>3.1.0</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.sonatype.plugins</groupId>
 					<artifactId>nexus-staging-maven-plugin</artifactId>
@@ -556,12 +481,9 @@
 						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 					</configuration>
 				</plugin>
-
 			</plugins>
 		</pluginManagement>
-
 		<plugins>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -581,7 +503,6 @@
   -->
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
@@ -616,7 +537,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -637,12 +557,9 @@
 					</execution>
 				</executions>
 			</plugin>
-
 		</plugins>
 	</build>
-
 	<profiles>
-
 		<profile>
 			<id>publish-to-maven-central</id>
 			<build>
@@ -663,7 +580,6 @@
 							</execution>
 						</executions>
 					</plugin>
-
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
@@ -676,7 +592,6 @@
 							</execution>
 						</executions>
 					</plugin>
-
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
@@ -689,7 +604,6 @@
 							</execution>
 						</executions>
 					</plugin>
-
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
@@ -700,10 +614,8 @@
 							<autoReleaseAfterClose>false</autoReleaseAfterClose>
 						</configuration>
 					</plugin>
-
 				</plugins>
 			</build>
 		</profile>
-
 	</profiles>
 </project>
