--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -280,7 +280,7 @@
 			<dependency>
 				<groupId>org.choco-solver</groupId>
 				<artifactId>choco-solver</artifactId>
-				<version>4.10.12</version>
+				<version>4.10.13-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
